Refactor: WIP process aspect